test/files/neg/t6902.check
t6902.scala:6: warning: unreachable code
    case Some(b) => 3 // no warning was emitted
                    ^
t6902.scala:11: warning: unreachable code
    case Some(b) => 3 // no warning was emitted
                    ^
t6902.scala:23: warning: unreachable code
    case 1 => 3 // crash
              ^
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
